--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
         "multer": "^1.3.0",
+        "node-cron": "^2.0.3",
         "qrcode": "^1.4.4",
         "react": "^16.9.0-alpha.0",
         "react-dom": "^16.9.0-alpha.0",
