--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "node-cron": "^2.0.3",
         "qrcode": "^1.4.4",
         "react": "^16.9.0-alpha.0",
+        "react-cookie-consent": "^5.1.3",
         "react-dom": "^16.9.0-alpha.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
